--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
   nav,
   footer {
     padding: 1% 0;
-    background-color: #white;
+    background-color: white;
   }
   
   @media only screen and (min-width: 320px) {
@@ -51,7 +51,7 @@
     }
   
     section:nth-child(even) {
-      background-color: #white;
+      background-color: white;
     }
   
     #header {
@@ -94,7 +94,7 @@
     }
   }
   
-  @media only screen and (min-width: 599px max-width:750px)  {
+  @media only screen and (min-width: 599px max-width: 750px)  {
   
     #aboutDef {
       margin-left: 30%;
