--- a/main.css
+++ b/main.css
@@ -11,10 +11,11 @@
     margin: 0%;
   }
   
-  nav,
+  /* nav, */
   footer {
     padding: 1% 0;
     background-color: white;
+    margin: 34px;
   }
   
   @media only screen and (min-width: 320px) {
@@ -26,7 +27,20 @@
     }
   
      #title {
-      margin-top: 5px;
+      margin-top: 7px;
+      margin-left: 15px;
+      float: left;
+      font-size: 35px;
+      margin-bottom: 5px;
+    }
+
+    #name {
+      color: white;
+
+    }
+
+    #contactSpan {
+      margin: 16px;
     }
   
     ul.links {
@@ -38,10 +52,6 @@
       margin-left: 50px;
       list-style-type: none;
       visibility:hidden;
-    }
-  
-    header {
-      padding: 12% 0;
     }
   
     section {
@@ -60,19 +70,28 @@
   
   
     .portPic {
-      max-height: 300px;
+      
+      max-width: 385px;
       margin-bottom: 25px;
       text-align: center;
       width: 87%;
       border: 1px steelblue solid;
       border-radius: 6px;
     }
+
+    .port2 {
+      max-width: 300px;
+    }
+
+    .port3 {
+      max-width: 328px;
+    }
   
      div.center {
       display: flex;
       flex-direction: row;
       justify-content: center;
-      margin: 7%;
+      display: flex;
   
     }
   
@@ -83,7 +102,8 @@
       padding: 20px;
       border: 4px solid #494949 !important;
       border-radius: 6px;
-      display: inline-block;
+      display: flex;
+      flex-direction: row;
     }
   
     .example_c:hover {
@@ -92,9 +112,14 @@
       border-color: #f6b93b !important;
       transition: all 0.4s ease 0s;
     }
+
+    .button_cont {
+      align-items: center;
+      margin: 10px;
+    }
   }
   
-  @media only screen and (min-width: 599px max-width: 750px)  {
+  @media only screen and (min-width: 599px)  {
   
     #aboutDef {
       margin-left: 30%;
